--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 </head>
 <body>
     <h1>Welcome to My Static Website</h1>
-    <p>This website is hosted on AWS S3 bucket and served via CloudFront.</p>
+    <p>This website is hosted on AWS S3 and served via CloudFront.</p>
     <p>Deployed using GitHub Actions!</p>
 </body>
 </html>
